Se realizan cambios en configuracion, conexion entre msvc users, supply y batch realizada